<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conference Hermes</string>
    <string name="api_key">AIzaSyB7hVn7WyU9HQl0D7C8fSDXEnIdR17ZvhM</string>
    <string name="action_settings">Settings</string>
    <string name="centres_title">LES CENTRES</string>
    <string name="footer_menu_text">ACCÉDER AU SITE WEB CONFERENCE-HERMES.FR</string>
    <string name="main_menu_text1">QUI SOMMES-NOUS</string>
    <string name="main_menu_text2">ACTUALITÉS</string>
    <string name="main_menu_text3">LES CENTRES PRÉS DE CHEZ VOUS</string>
    <string name="main_menu_text4">NOUS CONTACTER</string>
    <string name="lescentres">LES CENTRES</string>
    <string name="register_button_text">INSCRIVEZ-VOUS</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_read_news">ReadNewsActivity</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quae hic rei publicae vulnera inponebat, eadem ille sanabat. Pugnant Stoici cum Peripateticis. Quid ait Aristoteles reliquique Platonis alumni? Naturales divitias dixit parabiles esse, quod parvo esset natura contenta. Duo Reges: constructio interrete. Traditur, inquit, ab Epicuro ratio neglegendi doloris. Cur id non ita fit? Tollitur beneficium, tollitur gratia, quae sunt vincla concordiae. Nonne videmus quanta perturbatio rerum omnium consequatur, quanta confusio?

At habetur! Et ego id scilicet nesciebam! Sed ut sit, etiamne post mortem coletur? Scisse enim te quis coarguere possit? At iste non dolendi status non vocatur voluptas. Beatus sibi videtur esse moriens.

Dat enim intervalla et relaxat. Sed nimis multa. Quod quidem iam fit etiam in Academia. Varietates autem iniurasque fortunae facile veteres philosophorum praeceptis instituta vita superabat. Huius ego nunc auctoritatem sequens idem faciam.

Sed eum qui audiebant, quoad poterant, defendebant sententiam suam. Sin aliud quid voles, postea. Quid de Pythagora? Tum Triarius: Posthac quidem, inquit, audacius.

Hunc vos beatum; Nam, ut sint illa vendibiliora, haec uberiora certe sunt. Non est igitur summum malum dolor. Mihi vero, inquit, placet agi subtilius et, ut ipse dixisti, pressius. Illud mihi a te nimium festinanter dictum videtur, sapientis omnis esse semper beatos; Non modo carum sibi quemque, verum etiam vehementer carum esse? Cur id non ita fit? Facillimum id quidem est, inquam.</string>
    <string name="title_activity_tab_fragment">TabFragmentActivity</string>
    <string name="title_activity_my_fragment">MyFragmentActivity</string>

</resources>